# Tournament-Tracker

./: Cargo.toml  build.ps1
.cargo/: config.toml
bytes-to-text-tool/: bytes-to-text-tool.rs
src/: dom.rs  main.rs  match_list.rs  model.rs  outline.rs  round_robin_standings.rs  round_robin_table.rs  tournament.rs  ui.rs
src/model/: model_backwards_compat.rs  tournament.rs
src/ui/: bracket_view.rs  match_list.rs  outline.rs  round_robin_standings.rs  round_robin_table.rs  standings.rs
web/: index.html  style.css
