[package]
name = "tournament-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.84" }
web-sys = { version = "0.3.61", features=["Window", "Document", "Element", "HtmlElement", "HtmlInputElement"] }
console_log = { version = "1.0.0", features=["color"] }
log = "0.4.17"