[package]
name = "tournament-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.84" }
web-sys = { version = "0.3.61", features=["Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlTableElement", "HtmlTableRowElement",
    "HtmlCollection", "HtmlTableSectionElement", "Storage", "HtmlButtonElement", "HtmlSelectElement", "HtmlDivElement", "HtmlOptionsCollection",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "DomStringMap"] }
console_log = { version = "1.0.0", features=["color"] }
log = "0.4.17"
indexmap = { version = "1.9.3", features=["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
